# LSM6DSOX-Embedded-Rust-Driver

./: Cargo.toml  LICENSE-MIT  README.md  data.csv
.cargo/: config.toml
src/: accel.rs  gyro.rs  kalman.rs  lib.rs  main.rs
