[package]
authors = ["Kavin Gnanapandithan <kavin.balag@gmail.com>"]
readme = "README.md"
name = "lsm6dsox_driver"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/KavinTheG/LSM6DSOX-Embedded-Rust-Driver/tree/main"
description = "Driver for the LSM6DSOX 6-axis IMU."
keywords = ["no-std", "LSM6DSOX", "6-axis", "IMU", "embedded", "embedded-hal-driver"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "1.0"

[lib]
name = "lsm6dsox_driver"
path = "src/lib.rs"

